<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/youbackground"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_player1"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/profile_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_player_1_name"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/galano_grotesque_black_1"
                        android:text="@string/you"
                        android:gravity="center"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:textSize="@dimen/_12ssp"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_player_1_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/galano_grotesque_black_1"
                        android:text="@string/score_default"
                        android:gravity="center"
                        android:textColor="@color/icon_color_white"
                        android:textSize="@dimen/_22ssp" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:background="@drawable/roborbackground"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_player_2_name"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/galano_grotesque_black_1"
                        android:text="@string/robot"
                        android:gravity="center"
                        android:ellipsize="marquee"
                        android:textSize="@dimen/_12ssp"
                        android:singleLine="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_player_2_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/galano_grotesque_black_1"
                        android:text="@string/score_default"
                        android:gravity="center"
                        android:textColor="@color/icon_color_white"
                        android:textSize="@dimen/_22ssp" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/img_player2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:src="@drawable/robot1" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tuen_text"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/galano_grotesque_black_1"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp"
        tools:text="@string/your_turn"
        android:drawableBottom="@drawable/titleborder"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:textColor="@color/icon_color_white"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>